--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body {
     font-family: 'Poppins';
     font-style: normal;
+    background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(63, 76, 119) 70.2%);
+    width: 100vw;
+    height: 100vh;
+    overflow-y: hidden;
 }
 
 h1 {
     font-size: 32px;
+    color: white;
 }
 
 .container {
@@ -24,13 +29,15 @@ h1 {
 
 .container .log-reg button {
     width: 100%;
-    padding: 8px;
+    padding: 12px;
     font-family: 'Poppins';
     font-style: normal;
+    font-size: 16px;
     background: #5B52BC;
     border-radius: 4px;
     color: white;
     cursor: pointer;
+    border: 1px solid black;
 }
 
 .container .log-reg button:hover {
@@ -48,9 +55,19 @@ h1 {
 
 .container #login .inputs input {
     width: 50%;
-    padding: 8px;
+    padding: 12px;
     font-family: 'Poppins';
     font-style: normal;
     border-radius: 4px;
     border: 1px solid black;
+}
+
+.container #login .error {
+    color: red;
+    text-align: center;
+}
+
+.container #login .success {
+    color: limegreen;
+    text-align: center;
 }
